--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,7 @@
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href='/hello'>The servlet</a></td>
+        <td><a href='/user/list'>User list</a></td>
       </tr>
     </table>
   </body>
